Bug 177782 - Playing isnt stopped after the end of playlist, causing scrobbling to fail
Summary: Playing isnt stopped after the end of playlist, causing scrobbling to fail
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-14 16:02 UTC by Jussi Kekkonen
Modified: 2008-12-15 10:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jussi Kekkonen 2008-12-14 16:02:36 UTC
Version:           2.0-SVN (using 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2)), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27-10-generic

When playing a playlist to the end, after last track player doesn't stop, thus failing to scrobble last track.

It seems that it doesn't recognise playlist end, but it sticks in "playing" mode with the end of the last track
Comment 1 Mark Kretschmann 2008-12-15 10:06:37 UTC
SVN commit 897071 by markey:

When reaching the end of the playlist, make Amarok actually show that
playback has stopped. Until now it happily continued to display "Playing
Foo by Bar.."

As usual with all changes to EngineController, this patch could have
subtle side effects, so please keep testing extensively.

BUG: 177782

 M  +0 -1      EngineController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=897071