When reaching the end of the playlist, make Amarok actually show that playback has stopped. Until now it happily continued to display "Playing Foo by Bar.."

As usual with all changes to EngineController, this patch could have
subtle side effects, so please keep testing extensively.

BUG: 177782

svn path=/trunk/extragear/multimedia/amarok/; revision=897071